--- a/view/frontend/layout/checkout_index_index.xml
+++ b/view/frontend/layout/checkout_index_index.xml
@@ -21,6 +21,15 @@
                                                                 </item>
                                                             </item>
                                                         </item>
+                                                        <item name="additional-payment-validators" xsi:type="array">
+                                                        	<item name="children" xsi:type="array">
+                                                                    <!-- Declare your validation. START -->
+                                                                    <item name="simpleNoteValidation" xsi:type="array">
+                                                                        <item name="component" xsi:type="string">Magelearn_SimpleNote/js/view/isSimpleNote</item>
+                                                                    </item>
+                                                                    <!-- Declare your validation. END -->
+                                                                </item>
+                                                    	</item>
                                                     </item>
                                                 </item>
                                             </item>
