--- a/view/frontend/web/template/order_simple_note.html
+++ b/view/frontend/web/template/order_simple_note.html
@@ -1,7 +1,7 @@
 <div class="order-simple-note-wrapper">
     <div class="field">
         <label class="label" for="order-simple-note">
-            <span data-bind="i18n: 'Add a note to this order (optional)'"></span>
+            <span data-bind="i18n: 'Add a note to this order'"></span>
         </label>
         <input type="text"
                class="input-text"
